# express-friendly-cpprest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
examples/general_example/: CMakeLists.txt  CMakeSettings.json
examples/general_example/dependencies/include/efc/: App.hpp  Constants.hpp  InterruptHandler.hpp  Request.hpp  RequestObject.hpp
examples/general_example/dependencies/lib/: express-friendly-cpprest.lib
examples/general_example/include/: ErrorHandlers.hpp  Middlewares.hpp  Models.hpp  Objects.hpp  Requests.hpp
examples/general_example/src/: ErrorHandlers.cpp  Middlewares.cpp  Models.cpp  Requests.cpp  main.cpp
include/: App.hpp  InterruptHandler.hpp  Request.hpp  RequestObject.hpp  Router.hpp  Utils.hpp  ValidationManager.hpp  Validator.hpp
src/: App.cpp  InterruptHandler.cpp  Request.cpp  Router.cpp  Utils.cpp  ValidationManager.cpp  Validator.cpp  main.cpp
